node/infra/k8s/loggingservice.-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loggingservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loggingservice
  template:
    metadata:
      labels:
        app: loggingservice
    spec:
      containers:
        - name: loggingservice
          image: us.gcr.io/image-project-123/loggingservice
---
apiVersion: v1
kind: Service
metadata:
  name: loggingservice-srv
spec:
  selector:
    app: loggingservice
  ports:
    - name: loggingservice
      protocol: TCP
      port: 8004
      targetPort: 8004
