node/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    
spec:
  rules:
    - host: nuvexaphotos.com
      http:
        paths:
          - path: /api/photo/upload
            pathType: Prefix
            backend:
              service:
                name: photosmngservice-srv
                port:
                  number: 8004
          - path: /api/photo/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: photosmngservice-srv
                port:
                  number: 8004
          - path: /api/photo/?(.*)
            pathType: Prefix
            backend:
              service:
                name: photosmngservice-srv
                port:
                  number: 8004
          - path: /api/user/login
            pathType: Prefix
            backend:
              service:
                name: usermngservice-srv
                port:
                  number: 8000
          - path: /api/user/register
            pathType: Prefix
            backend:
              service:
                name: usermngservice-srv
                port:
                  number: 8000
          - path: /api/storage/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: storagemngservice-srv
                port:
                  number: 8002 
          - path: /api/usage/user/?(.*)
            pathType: Prefix
            backend:
              service:
                name: usagemngservice-srv
                port:
                  number: 8003
